RO1 example started

--- a/trs/tr1/parmes-tr-1-rev-1.lyx
+++ b/trs/tr1/parmes-tr-1-rev-1.lyx
@@ -3689,7 +3689,7 @@ name "tab:PI1"
 
 \end_inset
 
-Pipe impact: runtime and storage comparison
+Pipe impact: runtime and storage comparison.
 \end_layout
 
 \end_inset
